fixed header with nowrap

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,6 +4,7 @@
 
   height: 60px;
   padding: 0 50px;
+  white-space: nowrap;
 
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 
